--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,5 @@ OK - 2. check if margin and paddings are the same (use rem in sections)
 8. dark mode
 OK - 9. clean up css, replace divs with sections
 10. analize page structure
+11. sistema le spaziature su cell
+12. sistema l'hero su cell (meglio flexbox?)
