--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,13 @@
-0. do i need normalize.css?
-1. social icons are too small to tap
+OK - 0. do i need normalize.css?
+OK - 1. social icons are too small to tap
 OK - 2. check if margin and paddings are the same (use rem in sections)
 3. test with multiple browsers
 4. dropdown menu on header; remove social and contact button (it can be on the menu). Menu on the right?
 5. skip link
-6. focus-within per evidenziare l'elemento se un suo figlio ha il focus
-7. use rem for font sizes & margin/padding (only sections)
+INGUARDABILE - 6. focus-within per evidenziare l'elemento se un suo figlio ha il focus
+OK - 7. use rem for font sizes & margin/padding (only sections)
 8. dark mode
 OK - 9. clean up css, replace divs with sections
-10. analize page structure
-11. sistema le spaziature su cell
-12. sistema l'hero su cell (meglio flexbox?)
+OK - 10. analize page structure
+OK - 11. sistema le spaziature su cell
+OK - 12. sistema l'hero su cell (meglio flexbox?)
