--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,9 @@ OK - 0. do i need normalize.css?
 OK - 1. social icons are too small to tap
 OK - 2. check if margin and paddings are the same (use rem in sections)
 3. test with multiple browsers
-MANCA GESTIONE RESPONSIVE - 4. dropdown menu on header
+OK - 4. dropdown menu on header
 5. skip link
-INGUARDABILE - 6. focus-within per evidenziare l'elemento se un suo figlio ha il focus
+NO - 6. focus-within per evidenziare l'elemento se un suo figlio ha il focus
 OK - 7. use rem for font sizes & margin/padding (only sections)
 8. dark mode
 OK - 9. clean up css, replace divs with sections
